--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:       Programming pearls
-email:       rafal [at] paliwoda.eu
+email:       ""
 author:      Rafał Paliwoda
 description: ""
 baseurl:     ""
